add docs for architecture
